nodeco-blog/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeco-blog-service
  namespace: nodeco-prod
spec:
  type: NodePort
  selector:
    app: nodeco-blog
  ports:
  - name: blog-prod-port
    protocol: TCP
    port: 80
    targetPort: 8080
